# ai-auto-test

./: .env.example  .gitignore  README.md  aitest.yaml  pyproject.toml
cases/: example_baidu.md  form_httpbin_post.md  mobile_baidu_search_orange.md  smoke_example_domain.md  smoke_playwright_get_started.md
docs/superpowers/plans/: 2026-04-21-ai-ui-auto-test.md
docs/superpowers/specs/: 2026-04-21-ai-ui-auto-test-design.md
src/aitest/: case_parser.py  cli.py  gen.py  heal.py
src/aitest/llm/: client.py  prompts.py
tests/: conftest.py  test_all_case_files_parse.py  test_case_parser.py  test_gen_validate.py  test_llm_client.py
